--- a/Detectron2Multiple.ipynb
+++ b/Detectron2Multiple.ipynb
@@ -143,6 +143,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "import os\n",
+    "\n",
+    "os.makedirs('MergeDataset', exist_ok=True)\n",
+    "\n",
+    "with ZipFile('ObjectDetectionDataset.zip', 'r') as zipObj:\n",
+    "    zipObj.extractall('')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
