--- a/Detectron2Multiple.ipynb
+++ b/Detectron2Multiple.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,26 +68,24 @@
     "import os\n",
     "\n",
     "cfg = get_cfg()\n",
-    "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\"))\n",
-    "# cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\"))\n",
+    "# cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\"))\n",
+    "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\"))\n",
     "cfg.DATASETS.TRAIN = (\"train_dataset\",)\n",
-    "# cfg.DATASETS.TRAIN = (\"train\",)\n",
-    "# cfg.DATASETS.TRAIN = (\"Utensils_dataset\",\"Laptops_dataset\",\"Drinks_dataset\")\n",
     "cfg.DATASETS.TEST = (\"test_dataset\",)   # no metrics implemented for this dataset\n",
     "# cfg.DATASETS.TEST = ()   # no metrics implemented for this dataset\n",
-    "cfg.DATALOADER.NUM_WORKERS = 2\n",
-    "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\")# initialize from model zoo\n",
-    "# cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\")# initialize from model zoo\n",
+    "cfg.DATALOADER.NUM_WORKERS = 16\n",
+    "# cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\")# initialize from model zoo\n",
+    "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\")# initialize from model zoo\n",
     "cfg.SOLVER.IMS_PER_BATCH = 2\n",
-    "cfg.SOLVER.BASE_LR = 0.02\n",
-    "cfg.SOLVER.MAX_ITER = 250   # 300 iterations seems good enough, but you can certainly train longer\n",
-    "cfg.MODEL.ROI_HEADS.BATCH_SIZE_PER_IMAGE = 128   # faster, and good enough for this toy dataset\n",
+    "cfg.SOLVER.BASE_LR = 0.002\n",
+    "cfg.SOLVER.MAX_ITER = 2000   # 300 iterations seems good enough, but you can certainly train longer\n",
+    "cfg.MODEL.ROI_HEADS.BATCH_SIZE_PER_IMAGE = 512   # faster, and good enough for this toy dataset\n",
     "cfg.MODEL.ROI_HEADS.NUM_CLASSES = 3 # 3 classes (Person, Helmet, Car)\n",
-    "cfg.MODEL.DEVICE = 'cpu'\n",
+    "cfg.MODEL.DEVICE = 'cuda'\n",
     "cfg.OUTPUT_DIR = 'saved_models/FasterRCNN/'\n",
     "os.makedirs(cfg.OUTPUT_DIR, exist_ok=True)\n",
     "trainer = DefaultTrainer(cfg)\n",
-    "trainer.resume_or_load(resume=True)\n",
+    "trainer.resume_or_load(resume=False)\n",
     "trainer.train()"
    ]
   },
@@ -97,10 +95,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from detectron2.evaluation import COCOEvaluator, inference_on_dataset\n",
+    "from detectron2.data import build_detection_test_loader\n",
     "\n",
-    "# # Look at training curves in tensorboard:\n",
-    "# %load_ext tensorboard\n",
-    "# %tensorboard --logdir output"
+    "# Test model\n",
+    "cfg.MODEL.WEIGHTS = os.path.join(cfg.OUTPUT_DIR, \"model_final.pth\")\n",
+    "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.5  # set threshold for this model\n",
+    "\n",
+    "# Create COCO evaluator\n",
+    "evaluator = COCOEvaluator(\"test_dataset\", cfg, False, output_dir=\"./output/\")\n",
+    "\n",
+    "# Build test loader\n",
+    "val_loader = build_detection_test_loader(cfg, \"test_dataset\")\n",
+    "\n",
+    "# Perform inference and evaluation\n",
+    "evaluation_results = inference_on_dataset(trainer.model, val_loader, evaluator)\n",
+    "\n",
+    "# Print mAP (assuming COCO format)\n",
+    "print(\"mAP:\", evaluation_results['bbox'])\n"
    ]
   },
   {
@@ -109,7 +121,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# print(\"mAP per Category:\")\n",
+    "# for category, ap in evaluation_results[\"bbox\"].items():\n",
+    "#   print(f\"\\t{category}: {ap:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cfg.MODEL.WEIGHTS = os.path.join(cfg.OUTPUT_DIR, \"model_final.pth\")\n",
     "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.5   # set the testing threshold for this model\n",
     "cfg.DATASETS.TEST = (\"test_dataset\",)\n",
@@ -132,7 +154,7 @@
     "    outputs = predictor(im)\n",
     "    v = Visualizer(im[:, :, ::-1],\n",
     "                   metadata=sample_metadata, \n",
-    "                   scale=0.8, \n",
+    "                   scale=1, \n",
     "                   instance_mode=ColorMode.IMAGE_BW   # remove the colors of unsegmented pixels\n",
     "    )\n",
     "    v = v.draw_instance_predictions(outputs[\"instances\"].to(\"cpu\"))\n",
@@ -143,17 +165,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zipfile import ZipFile\n",
-    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from detectron2.utils.visualizer import Visualizer, ColorMode\n",
+    "from detectron2.engine import DefaultPredictor\n",
+    "import random\n",
     "\n",
-    "os.makedirs('MergeDataset', exist_ok=True)\n",
+    "# Initialize confusion matrix\n",
+    "num_classes = len(MetadataCatalog.get(\"test_dataset\").thing_classes)\n",
+    "conf_matrix = np.zeros((num_classes, num_classes), dtype=int)\n",
     "\n",
-    "with ZipFile('ObjectDetectionDataset.zip', 'r') as zipObj:\n",
-    "    zipObj.extractall('')"
+    "# Perform inference\n",
+    "predictor = DefaultPredictor(cfg)\n",
+    "sample_metadata = MetadataCatalog.get(\"test_dataset\")\n",
+    "dataset_dicts = DatasetCatalog.get(\"test_dataset\")\n",
+    "\n",
+    "for d in random.sample(dataset_dicts, 3):    \n",
+    "    im = cv2.imread(d[\"file_name\"])\n",
+    "    outputs = predictor(im)\n",
+    "    # Process predictions\n",
+    "    v = Visualizer(im[:, :, ::-1], metadata=sample_metadata, scale=1, instance_mode=ColorMode.IMAGE_BW)\n",
+    "    v = v.draw_instance_predictions(outputs[\"instances\"].to(\"cpu\"))\n",
+    "    plt.imshow(v.get_image()[:, :, ::-1])\n",
+    "    plt.show()\n",
+    "    # Update confusion matrix\n",
+    "    for i in range(len(outputs[\"instances\"])):\n",
+    "        pred_cls = outputs[\"instances\"].pred_classes[i].item()\n",
+    "        # Assuming ground truth annotations are available in dataset_dicts\n",
+    "        gt_cls = d[\"annotations\"][i][\"category_id\"]\n",
+    "        conf_matrix[gt_cls, pred_cls] += 1\n",
+    "\n",
+    "# Visualize confusion matrix\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "plt.imshow(conf_matrix, interpolation=\"nearest\", cmap=plt.cm.Blues)\n",
+    "plt.title(\"Confusion Matrix\")\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Predicted Label\")\n",
+    "plt.ylabel(\"True Label\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -180,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
