--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -113,15 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from ultralytics import YOLO\n",
     "\n",
-    "ROOT_DIR = '/Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset'\n",
-    "# ROOT_DIR = os.getcwd() + 'YOLO_dataset'\n",
+    "# ROOT_DIR = '/Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset'\n",
+    "ROOT_DIR = os.getcwd() + '\\YOLO_dataset'\n",
     "\n",
     "\n",
     "# Load a model\n",
@@ -130,7 +130,26 @@
     "\n",
     "\n",
     "# Use the model\n",
-    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=1,project='saved_models/YOLO/')  # train the model "
+    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=500,project='saved_models/YOLO/',device='cuda',batch=128,workers=10)  # train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform validation\n",
+    "results = model.val()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.box.all_ap"
    ]
   },
   {
@@ -157,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
