--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -117,6 +117,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for k, v in model.named_parameters():\n",
+    "    # print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from ultralytics import YOLO\n",
     "\n",
@@ -126,11 +143,26 @@
     "\n",
     "# Load a model\n",
     "# model = YOLO(\"yolov8n.yaml\")  # build a new model from scratch\n",
-    "model = YOLO('yolov8n.pt')\n",
+    "# model = YOLO('yolov5xu.pt')\n",
+    "model = YOLO('yolov5s6u.pt')\n",
+    "# model = YOLO('yolov8n.pt')\n",
+    "# model = YOLO('yolov8s.pt')\n",
+    "# model = YOLO('yolov8m.pt')\n",
+    "# model = YOLO('yolov8l.pt')\n",
+    "# model = YOLO('yolov8x.pt')\n",
+    "\n",
+    "\n",
+    "# Freeze\n",
+    "freeze = [f'model.{x}.' for x in range(10)]  # layers to freeze\n",
+    "for k, v in model.named_parameters():\n",
+    "    v.requires_grad = True  # train all layers\n",
+    "    if any(x in k for x in freeze):\n",
+    "        # print(f'freezing {k}')\n",
+    "        v.requires_grad = False\n",
     "\n",
     "\n",
     "# Use the model\n",
-    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=500,project='saved_models/YOLO/',device='cuda',batch=128,workers=10)  # train the model"
+    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=100,project='saved_models/YOLO/',device='cuda',batch=20,workers=10)  # train the model"
    ]
   },
   {
@@ -176,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
