--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -56,13 +56,13 @@
     "    dataset.export.ExportToYoloV5(output_path=output_path, yaml_file='dataset.yaml', copy_images=True)\n",
     "\n",
     "# For train dataset\n",
-    "train_annotations = \"COCOAnnotations/train.json\"\n",
+    "train_annotations = \"COCOAnnotations/trainnew.json\"\n",
     "train_images = os.getcwd() + \"/MergeDataset/\"\n",
     "train_dataset = import_dataset(train_annotations, train_images, \"BCCD_coco\")\n",
     "split_and_export(train_dataset, 'YOLO_dataset_train/labels')\n",
     "\n",
     "# For test dataset\n",
-    "test_annotations = \"COCOAnnotations/test.json\"\n",
+    "test_annotations = \"COCOAnnotations/testnew.json\"\n",
     "test_images = os.getcwd() + \"/MergeDataset/\"  # Assuming test images are in the same folder as train images\n",
     "test_dataset = import_dataset(test_annotations, test_images, \"BCCD_coco\")\n",
     "split_and_export(test_dataset, 'YOLO_dataset_test/labels')\n"
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, v in model.named_parameters():\n",
+    "# for k, v in model.named_parameters():\n",
     "    # print(k)"
    ]
   },
@@ -127,6 +127,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Individual Training"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,8 +150,9 @@
     "\n",
     "# Load a model\n",
     "# model = YOLO(\"yolov8n.yaml\")  # build a new model from scratch\n",
-    "# model = YOLO('yolov5xu.pt')\n",
-    "model = YOLO('yolov5s6u.pt')\n",
+    "model = YOLO('yolov5nu.pt')\n",
+    "# model = YOLO('yolov5s6u.pt')\n",
+    "# model = YOLO('yolo5s.yaml')\n",
     "# model = YOLO('yolov8n.pt')\n",
     "# model = YOLO('yolov8s.pt')\n",
     "# model = YOLO('yolov8m.pt')\n",
@@ -153,7 +161,7 @@
     "\n",
     "\n",
     "# Freeze\n",
-    "freeze = [f'model.{x}.' for x in range(10)]  # layers to freeze\n",
+    "freeze = [f'model.{x}.' for x in range(20)]  # layers to freeze\n",
     "for k, v in model.named_parameters():\n",
     "    v.requires_grad = True  # train all layers\n",
     "    if any(x in k for x in freeze):\n",
@@ -162,7 +170,14 @@
     "\n",
     "\n",
     "# Use the model\n",
-    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=100,project='saved_models/YOLO/',device='cuda',batch=20,workers=10)  # train the model"
+    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=2,project='saved_models/YOLO/',device='cuda',batch=4,workers=10)  # train the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training from list of models"
    ]
   },
   {
@@ -171,8 +186,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "# ROOT_DIR = '/Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset'\n",
+    "ROOT_DIR = os.getcwd() + '\\YOLO_dataset'\n",
+    "\n",
+    "\n",
+    "\n",
+    "model_list = [\n",
+    "    # 'yolov5nu.pt',\n",
+    "    # 'yolov5s6u.pt',\n",
+    "    # 'yolov6-n.pt',\n",
+    "    # 'yolov6-n.pt',\n",
+    "    # 'yolov8n.pt',\n",
+    "    # 'yolov8s.pt',\n",
+    "    # 'yolov8m.pt',\n",
+    "    'yolov9c.pt'\n",
+    "]\n",
+    "\n",
+    "for model_name in model_list:\n",
+    "\n",
+    "    if os.path.exists(model_name.split(\".\")[0]):\n",
+    "        print(\"Folder exists\")\n",
+    "        continue\n",
+    "\n",
+    "    model = YOLO(model_name) \n",
+    "    # Freeze\n",
+    "    try:\n",
+    "        freeze = [f'model.{x}.' for x in range(15)]  # layers to freeze\n",
+    "        for k, v in model.named_parameters():\n",
+    "            v.requires_grad = True  # train all layers\n",
+    "            if any(x in k for x in freeze):\n",
+    "                # print(f'freezing {k}')\n",
+    "                v.requires_grad = False\n",
+    "    except:\n",
+    "        model = YOLO(model_name) \n",
+    "\n",
+    "\n",
+    "    # Use the model\n",
+    "    results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=500,project='saved_models/YOLO/',device='cuda',batch=8,workers=10,name=model_name.split('.')[0])  # train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "\n",
+    "model_list = [\n",
+    "    'yolov5nu.pt',\n",
+    "    'yolov5s6u.pt',\n",
+    "    # 'yolov6n.pt',\n",
+    "    # 'yolov6s.pt',\n",
+    "    'yolov8n.pt',\n",
+    "    'yolov8s.pt',\n",
+    "    'yolov8m.pt',\n",
+    "    'yolov9c.pt'\n",
+    "]\n",
+    "\n",
+    "\n",
     "# Perform validation\n",
-    "results = model.val()"
+    "for model_name in model_list:\n",
+    "    model = YOLO(f'saved_models/YOLO/{model_name.split(\".\")[0]}/weights/best.pt')\n",
+    "    results = model.val()"
    ]
   },
   {
@@ -181,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.box.all_ap"
+    "# model.predict()"
    ]
   },
   {
