--- a/Detectron2Multiple.ipynb
+++ b/Detectron2Multiple.ipynb
@@ -24,8 +24,8 @@
    "outputs": [],
    "source": [
     "from detectron2.data.datasets import register_coco_instances\n",
-    "register_coco_instances(\"train_dataset\", {}, \"COCOAnnotations/train.json\", \"MergeDataset/\")\n",
-    "register_coco_instances(\"test_dataset\", {}, \"COCOAnnotations/test.json\", \"MergeDataset/\")\n"
+    "register_coco_instances(\"train_dataset\", {}, \"COCOAnnotations/trainnew.json\", \"MergeDataset/\")\n",
+    "register_coco_instances(\"test_dataset\", {}, \"COCOAnnotations/testnew.json\", \"MergeDataset/\")"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "sample_metadata = MetadataCatalog.get(\"train_dataset\")\n",
-    "dataset_dicts = DatasetCatalog.get(\"train_dataset\")"
+    "dataset_dicts = DatasetCatalog.get(\"test_dataset\")"
    ]
   },
   {
@@ -69,17 +69,19 @@
     "\n",
     "cfg = get_cfg()\n",
     "# cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\"))\n",
-    "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\"))\n",
+    "# cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\"))\n",
+    "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_X_101_32x8d_FPN_3x.yaml\"))\n",
     "cfg.DATASETS.TRAIN = (\"train_dataset\",)\n",
     "cfg.DATASETS.TEST = (\"test_dataset\",)   # no metrics implemented for this dataset\n",
     "# cfg.DATASETS.TEST = ()   # no metrics implemented for this dataset\n",
     "cfg.DATALOADER.NUM_WORKERS = 16\n",
     "# cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\")# initialize from model zoo\n",
-    "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\")# initialize from model zoo\n",
+    "# cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_R_101_FPN_3x.yaml\")# initialize from model zoo\n",
+    "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/faster_rcnn_X_101_32x8d_FPN_3x.yaml\")# initialize from model zoo\n",
     "cfg.SOLVER.IMS_PER_BATCH = 2\n",
     "cfg.SOLVER.BASE_LR = 0.002\n",
-    "cfg.SOLVER.MAX_ITER = 2000   # 300 iterations seems good enough, but you can certainly train longer\n",
-    "cfg.MODEL.ROI_HEADS.BATCH_SIZE_PER_IMAGE = 512   # faster, and good enough for this toy dataset\n",
+    "cfg.SOLVER.MAX_ITER = 600   # 300 iterations seems good enough, but you can certainly train longer\n",
+    "cfg.MODEL.ROI_HEADS.BATCH_SIZE_PER_IMAGE = 128   # faster, and good enough for this toy dataset\n",
     "cfg.MODEL.ROI_HEADS.NUM_CLASSES = 3 # 3 classes (Person, Helmet, Car)\n",
     "cfg.MODEL.DEVICE = 'cuda'\n",
     "cfg.OUTPUT_DIR = 'saved_models/FasterRCNN/'\n",
@@ -233,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
