--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -4,26 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. conda create --prefix \"C:\\\\Users\\\\rs659\\\\Desktop\\\\Object-Detection\\\\wincondaprojenv\" python=3.11.6  \n",
-    "2. conda activate \"C:\\\\Users\\\\rs659\\\\Desktop\\\\Object-Detection\\\\wincondaprojenv\"\n",
-    "3. pip install torch==2.0.1 torchvision==0.15.2 torchaudio==2.0.2 --index-url https://download.pytorch.org/whl/cu118\n",
-    "4. conda install -p c:\\Users\\rs659\\Desktop\\Object-Detection\\wincondaprojenv ipykernel --update-deps --force-reinstall\n",
-    "\n",
-    "\n",
-    "pip install torch==2.1.0 torchvision==0.16.0 torchaudio==2.1.0 --index-url https://download.pytorch.org/whl/cu121\n",
-    "conda install -p c:\\Users\\rs659\\Desktop\\Object-Detection\\wincondaprojenv ipykernel --update-deps --force-reinstall\n",
-    "\n",
-    "5. pip install pybind11\n",
-    "6. pip install opencv-python\n",
-    "7. pip instal ultralytics\n",
-    "8. pip install pylabel\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Merge Different COCO dataset\n",
-    "https://gradiant.github.io/pyodi/reference/apps/coco-merge/\n",
-    "pyodi coco merge coco_1.json coco_2.json output.json\n"
+    "# Create YOLO Dataset"
    ]
   },
   {
@@ -132,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Individual Training"
+    "# Train Using Ultralytics Library"
    ]
   },
   {
@@ -145,14 +126,15 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# ROOT_DIR = '/Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset'\n",
-    "ROOT_DIR = os.getcwd() + '\\YOLO_dataset'\n",
+    "# ROOT_DIR = os.getcwd() + '\\YOLO_dataset'\n",
+    "ROOT_DIR = os.getcwd() + '/yolo-data'\n",
     "\n",
     "\n",
     "# Load a model\n",
     "# model = YOLO(\"yolov8n.yaml\")  # build a new model from scratch\n",
     "model = YOLO('yolov5nu.pt')\n",
     "# model = YOLO('yolov5s6u.pt')\n",
-    "# model = YOLO('yolo5s.yaml')\n",
+    "# model = YOLO('yolo5s.pt')\n",
     "# model = YOLO('yolov8n.pt')\n",
     "# model = YOLO('yolov8s.pt')\n",
     "# model = YOLO('yolov8m.pt')\n",
@@ -161,16 +143,50 @@
     "\n",
     "\n",
     "# Freeze\n",
-    "freeze = [f'model.{x}.' for x in range(20)]  # layers to freeze\n",
-    "for k, v in model.named_parameters():\n",
-    "    v.requires_grad = True  # train all layers\n",
-    "    if any(x in k for x in freeze):\n",
-    "        # print(f'freezing {k}')\n",
-    "        v.requires_grad = False\n",
+    "# freeze = [f'model.{x}.' for x in range(20)]  # layers to freeze\n",
+    "# for k, v in model.named_parameters():\n",
+    "#     v.requires_grad = True  # train all layers\n",
+    "#     if any(x in k for x in freeze):\n",
+    "#         # print(f'freezing {k}')\n",
+    "#         v.requires_grad = False\n",
     "\n",
     "\n",
     "# Use the model\n",
-    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=2,project='saved_models/YOLO/',device='cuda',batch=4,workers=10)  # train the model"
+    "# results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=2,project='saved_models/YOLO/',device='cuda',batch=4,workers=10)  # train the model\n",
+    "results = model.train(data=os.path.join(ROOT_DIR, \"dataset.yaml\"), epochs=2,project='saved_models/YOLO/',device='mps',batch=32,workers=10)  # train the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Using Ultralytics repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/ultralytics/yolov5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python3 yolov5/train.py --data /Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset/dataset.yaml --weights yolov5s.pt --epochs 100 --batch 4 --freeze 10\n",
+    "\n",
+    "\n",
+    "!python train.py --batch 128 --epochs 50 \\\n",
+    "                 --data /Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset/dataset.yaml \\\n",
+    "                 --hyp /Users/rishabhshah/Desktop/AIPI590/Object-Detection/YOLO_dataset/dataset.yaml \\\n",
+    "                 --weights yolov5l.pt \\\n",
+    "                 --project  saved_models/YOLO/ \\\n",
+    "                 --name YOLOv5_Final_Validation"
    ]
   },
   {
@@ -289,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
